--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@types/node": "^16.11.68",
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
+        "eslint-plugin-cypress": "^2.12.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.4.2",
@@ -55,6 +56,8 @@
         ]
     },
     "devDependencies": {
+        "@testing-library/cypress": "^9.0.0",
+        "cypress": "^12.1.0",
         "eslint-config-prettier": "^8.5.0",
         "husky": "^8.0.2",
         "jest-fetch-mock": "^3.0.3",
